Refactored package name and maven group to 'com.cj.scmconduit'

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
-[scm-conduit] make it easy to consume shelved changes
-[scm-conduit] make it easy to share changes as a shelve
-[scm-conduit] fix the issue where you have to merge with your own changes after a submit
-[scm-conduit] make it easy to make a new conduit from a given p4 depot path
-[scm-conduit] make it easy to make a 'branch' conduit that mirrors a p4 branch
+multi-user support
+fix the issue where you have to merge with your own changes after a submit
+make it easy to make a new conduit from a given p4 depot path
+make it easy to make a 'branch' conduit that mirrors a p4 branch
+make it easy to consume shelved changes
+make it easy to share changes as a shelve
+
